[tool.poetry]
name = "cdcstream"
version = "0.1.3"
description = "Implementation of Ienco's algorithm CDCStream"
readme = "DESCRIPTION.md"
authors = ["Martin Trat <trat@fzi.de>"]
homepage = "https://github.com/fzi-forschungszentrum-informatik/cdcstream"
repository = "https://github.com/fzi-forschungszentrum-informatik/cdcstream"
license = "MIT"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
packaging = "*"
python = ">=3.7"
numpy = "*"
pandas = "*"
python-javabridge = "*"
python-weka-wrapper3 = ">=0.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
