[tool.poetry]
name = "cdcstream"
version = "0.1.5"
description = "Implementation of Ienco's algorithm CDCStream"
readme = "DESCRIPTION.md"
authors = ["Martin Trat <trat@fzi.de>"]
homepage = "https://github.com/fzi-forschungszentrum-informatik/cdcstream"
repository = "https://github.com/fzi-forschungszentrum-informatik/cdcstream"
license = "GNU General Public License v3.0"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
packaging = "*"
python = ">=3.7"
numpy = "*"
pandas = "*"
python-javabridge = "*"
python-weka-wrapper3 = {git = "https://github.com/fracpete/python-weka-wrapper3.git", rev = "a8c86c99068ccf238d16f3acea09182280167223"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
